const en = {
  appVersion: {
    newVersion: 'A new version of Coldtivate is available!',
    pleaseUpdate: 'Please update app before continuing.',
  },
  languages: {
    current: 'English',
    label: 'Language',
    options: {
      en: 'English',
      hi: 'Hindi',
      or: 'Oriya',
      gu: 'Gujarati',
...
      yo: 'Yoruba',
      ha: 'Hausa',
      ar: 'Arabic',
    },
  },
  gender: {
    female: 'Female',
    male: 'Male',
    other: 'Other',
  },
  navigation: {
    error: {
      errorMessage: 'Oops... looks like something went wrong.',
      tryAgainMessage: 'Please try again later.',
...
      ForgotPassword: 'Forgot Password',
      PasswordReset: 'Reset',
      AppInfo: 'App info',
      Logout: 'Log-out',
    },
    management: {
      Root: 'Management',
      CompanyDetails: 'Company Details',
      RevenueAnalysis: 'Revenue analysis',
      UsageAnalysis: 'Usage Analysis',
      Locations: 'Locations',
      AddLocation: 'Add Location',
      EditLocation: 'Edit Location',
      CoolingUnits: 'Cooling Units',
      DisabledCoolingUnitsDescription: 'Add at least one location',
      CoolingUsers: 'Cooling Users',
      AddCoolingUser: 'Add Cooling User',
      EditCoolingUser: 'Edit Cooling User',
      AddCoolingUnit: 'Add Cooling Unit',
      EditCoolingUnit: 'Edit Cooling Unit',
...
      MarketplaceFavoritesTab: 'Favorites',
      Orders: 'Orders',
      MyOrders: 'My Orders',
      MySales: 'My Sales',
      OrderDetails: '{{orderCode}}',
      KnowledgeHub: 'Knowledge Hub',
      QuitTutorial: 'Quit Tutorial',
      FAQ: 'FAQ',
      About: 'About',
      Management: 'Management',
      Tutorial: 'Tutorial',
      PayoutOptions: 'Payout options',
      PaymentMethods: 'Payment methods',
...
    close: 'Close',
    delete: 'Delete',
    ok: 'Ok',
    all: 'All',
    none: 'None',
    next: 'Next',
    back: 'Back',
    search: 'Search...',
    or: 'or',
    add: 'Add',
    edit: 'Edit',
    go: 'Go!',
    done: 'Done',
...
    },
  },
  Auth: {
    welcomePopup:
      "Welcome to Coldtivate! If you are a farmer, a trader, or are interested in purchasing produce stored in the cold rooms, please sign up by clicking on 'Sign up as cooling user or consumer'. If you work for a cooling company, please contact your responsible to check whether your company is registered. If it is, your responsible should send you an SMS invite for you to sign up as a registered 
    Root: {
      welcome: 'Welcome to Coldtivate',
      signIn: 'Sign In',
      signUpCompany: 'Sign up as Company',
      signUpCoolingUser: 'Sign Up as a Cooling User or Consumer',
      appInfo: 'App Info',
    },
    SignIn: {
      heading: 'Sign In',
      accounts: {
        registeredEmployee: {
...
    },
    SignUp: {
      select: {
        header: 'Select a {{fieldName}}',
        label: 'Search...',
        cancel: 'Cancel',
        ok: 'OK',
      },
      welcome: 'Welcome to Coldtivate',
      schema: {
        passwordError:
          'Your password needs to be at least 8 characters long, contain one uppercase and one lowercase letters, and a number.',
        confirmPasswordError: 'Password confirmation is mandatory.',
...
          'Minimum eight characters, at least one uppercase letter, one lowercase letter and one number.',
      },
    },
  },
  Dashboard: {
    TemperatureAlert: {
      title: 'Temperature alert',
      subtitle: 'We noticed there was a change. These are the commodities currently in storage.',
      edit: 'Do you want to edit the temperature ?',
      temperature: 'Temperature',
      newTemperature: 'New temperature',
      confirm: 'Confirm new temperature',
      continueWithoutUpdate: 'Continue without update',
      sensorHint: 'Cannot add temperature because a sensor is connected to the cooling unit.',
      latestTemperature: 'The latest temperature was registered on {{date}}.',
    },
    emptyGeneral: 'At the moment, there is no available data.',
    emptyCoolingUser:
      'Items in storage will appear in the dashboard when you do at least one check-in in any room.',
...
      },
    },
    CrateManagement: {
      userModalTitle: 'Select a cooling user',
      addUserLink: 'Cooling user not in list? Add the user from Management ➜ Cooling users ➜ +',
      coolingUserLabel: 'Cooling user',
      selectCoolingUnitLabel: 'Select a cooling unit',
      coolingUnitLabel: 'Cooling unit',
      noUnitWarning: 'Please select a cooling unit',
      noCratesWarning: "The selected Cooling user doesn't have any crates in this cooling unit",
      operationError: 'Something went wrong. Please try again later or contact support.',
      FarmerSurvey: {
        warningMessage: 'Please fill in the baseline survey for {{crop}}!',
...
        coolingFeesAlreadyPaid: 'Cooling fees already paid',
        coolingFeesAlreadyPaidTooltip:
          'Part of one or more crates in this operation were sold on the marketplace. The corresponding cooling fees were already deducted from your payout.',
        priceWithDiscount: 'Total price',
        paymentType: {
          label: 'Payment type',
          cash: 'Cash',
          creditCard: 'Credit Card',
          bankTransfer: 'Bank Transfer',
        },
        bankTransfer: {
          title: "Receiver's Details",
          accountName: 'Account Name',
...
          deviceTag: 'Device Tag',
          dateAdded: 'Date Added',
          sensorType: 'Sensor Type',
        },
        coolingUnitTypes: {
          FARM_GATE_STORAGE_ROOM: 'It is a storage room placed at a farm-gate',
          MARKET_STORAGE_ROOM: 'It is a storage room placed at a market',
          MOVABLE_UNIT: 'It is a movable unit (for example, a refrigerated truck)',
          OTHER: 'Other',
        },
        pricing: {
          label: 'Price type',
          PERIODICITY: 'Per day',
...
        success: 'Successfully updated user',
      },
      sections: {
        sellerSettings: 'Seller Settings',
        companySellerSettings: 'Seller Settings (Company)',
        buyerSettings: 'Buyer Settings',
        details: 'Details',
      },
      ContactsSharing: {
        publicPhone: 'Make phone number public',
        publicEmail: 'Make e-mail public',
      },
      PayoutSettings: {
...
        form: {
          nameLabel: 'Account name',
          namePlaceholder: 'Insert account name',
          accountNumberLabel: 'Account number',
          accountNumberPlaceholder: 'Insert account number',
          countryLabel: 'Country',
          nigeria: 'Nigeria',
          selectBank: 'Select bank from list',
          bank: 'Bank',
          accountType: 'Account Type',
          selectAccountType: 'Select account type',
          accountTypes: {
            personal: 'Personal',
...
