...
          onPress={(evt) => {
            evt.stopPropagation();
            setIsCrateManagementOpen((v) => !v);
          }}
          onLayout={onLayout}
          disabled={!coolingUnit}
          testID="dashboard-operator-actions"
        >
          {isCrateManagementOpen ? (
            <Icon source="close" size={25} color="white" />
          ) : (
            <CratesManagement width={30} height={30} />
          )}
...
          </SkiaShadow>
          <SkiaShadow blur={4} dx={0} dy={4} color={colors.zinc[200]} borderRadius={20}>
            <TouchableOpacity
              tw="w-10 h-10 mx-1 items-center justify-center rounded-xl bg-red-400"
              onPress={onCheckOut}
              onLayout={onInitiateCheckoutLayout}
              testID="dashboard-operator-actions-checkout"
            >
              <CheckOut width={20} height={20} />
            </TouchableOpacity>
          </SkiaShadow>
        </View>
      ) : null}
...
