...
            </Text>
            <Text variant="TextMedium" tw="text-lg text-red-400">
              *
            </Text>
          </View>
          <SelectWithStore<EPaymentMethod>
            testID="payment-method-select"
            datums={[
              EPaymentMethod.CASH,
              EPaymentMethod.CREDIT_CARD,
              ...(company?.country === 'NG' ? [EPaymentMethod.BANK_TRANSFER] : []),
            ]}
            isModalVisible={isPaymentTypeModalOpen}
...
        </TouchableOpacity>
        <Divider tw="bg-gray-400 my-2" />
        <View tw="flex flex-row w-full justify-between items-center mb-4">
          <Text variant="TextMedium" tw="text-lg">
            {t('Dashboard.CrateManagement.CheckOut.paid')}
          </Text>
          <Switch value={isPaid} onChange={() => setIsPaid(!isPaid)} testID="checkout-paid" />
        </View>
      </KeyboardAwareScrollView>

      <HideWithKeyboardView tw="w-full flex-row items-center justify-between px-4 pb-16 pt-4 absolute bottom-[-5%] left-0 right-0 bg-white border-t-0.5 border-gray-600 border-solid">
        <Button
          style={{ width: BUTTON_WIDTH }}
...
