...
        <View tw="flex flex-row w-full justify-between items-center">
          <Text variant="TextMedium" tw="text-lg max-w-[70%]" numberOfLines={1}>
            {t('Dashboard.CrateManagement.selectCoolingUnitLabel')}
          </Text>
          <View tw="max-w-[30%]">
            <SelectWithStore<CoolingUnit>
              testID="cooling-unit-select"
              datums={coolingUnits ?? []}
              isModalVisible={isUnitsModalOpen}
              setIsModalVisible={setIsUnitsModalOpen}
              itemName={(item) => item?.name}
              disabled={!!_crates?.length || isLoading}
              useSelectStore={useCrateSelectionCoolingUnitStore}
...
