...
        name="capacityInNumberCrates"
        control={control}
        render={({ field: { onChange, value, onBlur } }) => (
          <TextInput
            tw="w-full bg-transparent mt-1"
            label={`${t('Dashboard.Management.AddCoolingUnit.fields.capacityInNumberCrates')}*`}
            testID="field-max-number-crates"
            mode="flat"
            dense
            value={value}
            keyboardType="numeric"
            onChangeText={onChange}
            onBlur={onBlur}
...
