...
          variant="md"
          isOpen={isModalVisible}
          onOpenChange={setIsModalVisible}
          onDismiss={() => setInternalSelection(field.value?.toString() ?? null)}
        >
          <Select.Touchable
            testID="location-select"
            label={`${t('Dashboard.Management.AddCoolingUnit.fields.location')}*`}
            displayValue={field.value ? companyLocations[field.value] : ''}
          />
          <Select.Dialog
            enableScroll
            header={t('Dashboard.Management.AddCoolingUnit.fields.location')}
...
