...
          variant="md"
          isOpen={isModalVisible}
          onOpenChange={setIsModalVisible}
          onDismiss={() => setInternalSelection(field.value)}
        >
          <Select.Touchable
            testID="cooling-unit-type-select"
            label={`${t('Dashboard.Management.AddCoolingUnit.fields.coolingUnitType')}*`}
            displayValue={displayValue}
          />
          <Select.Dialog
            enableScroll
            header={t('Dashboard.Management.AddCoolingUnit.fields.coolingUnitType')}
...
