...
          />
          <Divider />
        </RBAC.ProtectedResource>

        <RBAC.ProtectedResource action="NAVIGATE" subject="Locations">
          <List.Item
            testID="locations-list-item"
            onLayout={onLocationsLayout}
            tw="px-0 py-2"
            title={undefined}
            left={() => <Text tw="text-base w-[80%]">{t('navigation.management.Locations')}</Text>}
            onPress={() => {
              navigation.navigate('Locations');
...
          />
          <Divider />
        </RBAC.ProtectedResource>

        <RBAC.ProtectedResource action="NAVIGATE" subject="Operators">
          <List.Item
            testID="operators-list-item"
            onLayout={onOperatorsLayout}
            tw="px-0 py-2"
            title={undefined}
            left={() => <Text tw="text-base w-[80%]">{t('navigation.management.Operators')}</Text>}
            onPress={() => {
              navigation.navigate('Operators');
...
