...

      {/** SIGNUP COMPANY */}
      <Text tw="mb-2 px-4 text-xl font-bold">{t('Auth.SignUp.SignUpCoolingUser.header')}</Text>

      {/** COUNTRY */}
      <SignUpFormSelectLg<SignUpCoolingUserSchemaType>
        testID="country-select"
        items={countries}
        label={t('Auth.SignUp.commonForm.countryFieldName')}
        name="country"
        control={control}
        search={search}
        setSearch={setSearch}
...
        label={t('Auth.SignUp.SignUpCoolingUser.languageFieldName')}
        name="language"
        control={control}
        items={LANGUAGES}
        translateItemLabel={(item) => LANGUAGE_CODES[item as keyof typeof LANGUAGE_CODES]}
        required
        testID="language-select"
      />
      {errors.language && (
        <Text tw="text-xs text-red-600 mt-[-2] mb-2 pl-3 w-[95%]">
          {errors.language.message?.toString()}
        </Text>
      )}

      {/** GENDER */}
      <SignUpFormSelectMd<SignUpCoolingUserSchemaType>
        testID="gender-select"
        label={t('Auth.SignUp.commonForm.genderFieldName')}
        name="gender"
        control={control}
        items={GENDERS}
        translateItemLabel={(item) => GENDER_CODES[item as keyof typeof GENDER_CODES]}
        enableScroll={false}
...
            onChangeText={onChange}
            value={value}
            secureTextEntry={hidePass && !launchArgs.isE2E}
            error={errors.password?.password}
            right={
              <TextInput.Icon
                testID="password-eye-icon"
                icon={hidePass ? 'eye' : 'eye-off'}
                onPress={() => setHidePass(!hidePass)}
              />
            }
          />
        )}
...
          required: true,
        }}
        render={({ field: { onChange, value } }) => (
          <View tw="flex flex-row items-center max-w-[85%] mx-4 my-2 space-x-2">
            <View tw="border border-green-primary rounded-md scale-75">
              <Checkbox
                testID="terms-checkbox"
                onPress={() => {
                  onChange(!value);
                }}
                status={value ? 'checked' : 'unchecked'}
              />
            </View>
...
