...
      </Drawer.Section>

      <Drawer.Item
        label={t('navigation.auth.Logout')}
        onPress={onLogout}
        icon="logout-variant"
        testID="drawer-item-logout"
      />
    </StyledDrawerContentScrollView>
  );
}

